--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "homepage": "https://akash-10-23.github.io/akash-portfolio",
+  "homepage": "https://akashratanverma.tech",
   "name": "akash-portfolio",
   "version": "1.2.0",
   "scripts": {
